--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
