--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "07--restserver",
   "version": "1.0.0",
-  "description": "",
+  "description": "Servicio REST desarrollado con node, express y mongodb para manejar el CRUD de una cafetería",
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^3.0.2",
@@ -13,7 +13,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
